k8s/08-processor-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: processor-service
  namespace: fiapx
  labels:
    app: processor-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: processor-service
  template:
    metadata:
      labels:
        app: processor-service
      annotations:
        iam.amazonaws.com/role: REPLACE_POD_S3_ROLE_ARN
    spec:
      serviceAccountName: fiapx-upload   # reutiliza o mesmo SA com acesso S3
      containers:
        - name: processor-service
          image: REPLACE_AWS_ACCOUNT.dkr.ecr.us-east-1.amazonaws.com/fiapx/processor-service:latest
          resources:
            requests:
              cpu: 100m      # FFmpeg e mais pesado
              memory: 256Mi
            limits:
              cpu: 800m
              memory: 512Mi
