k8s/07-upload-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upload-service
  namespace: fiapx
  labels:
    app: upload-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: upload-service
  template:
    metadata:
      labels:
        app: upload-service
      annotations:
        iam.amazonaws.com/role: REPLACE_POD_S3_ROLE_ARN
    spec:
      serviceAccountName: fiapx-upload
      containers:
        - name: upload-service
          image: REPLACE_AWS_ACCOUNT.dkr.ecr.us-east-1.amazonaws.com/fiapx/upload-service:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: upload-service
  namespace: fiapx
spec:
  selector:
    app: upload-service
  ports:
    - port: 80
      targetPort: 8080
