k8s/09-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: fiapx
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: REPLACE_AWS_ACCOUNT.dkr.ecr.us-east-1.amazonaws.com/fiapx/frontend:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: appsettings
              mountPath: /usr/share/nginx/html/appsettings.Production.json
              subPath: appsettings.Production.json
          resources:
            requests:
              cpu: 20m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
          readinessProbe:
            httpGet:
              path: /nginx-health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /nginx-health
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
      volumes:
        - name: appsettings
          configMap:
            name: frontend-appsettings
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: fiapx
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
